test: fix testing dependency issues with jdk 17